# speech-llm

./: .gitignore  Dockerfile  README.md  requirements.txt  test.py  test2.py
deploy/: app.py  generate_audio.py
models/: factory.py  vq_transformer.py
rust/: Cargo.toml  out.safetensors
rust/src/: cli.rs  main.rs  multilingual.rs  utils.rs
rust/src/models/: custom_model.rs  layers.rs  mod.rs  parler_tts.rs  quantized_model.rs  textllm.rs  transformer.rs  tts.rs  whisper.rs
