[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.0", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.0" }
hf-hub = {version="0.4.1",features=["tokio"]}
serde_json = "1.0.99"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
tokenizers = { version = "0.19.1", features = ["onig"] }
byteorder = "1.4.3"
symphonia = "0.5.4"
cpal = { version = "0.15.2", optional = true }
rand = "0.8.5"

[dev-dependencies]