[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/gouthamsk98/candle.git", version = "0.8.2", features = ["metal"] }
candle-nn = { git = "https://github.com/gouthamsk98/candle.git", version = "0.8.2", features = ["metal"] }
candle-transformers = { git = "https://github.com/gouthamsk98/candle.git", version = "0.8.2" }
candle-examples = { git = "https://github.com/gouthamsk98/candle.git", version = "0.8.2" }

hf-hub = {version="0.4.1",features=["tokio"]}
serde_json = "1.0.99"
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
tokenizers = { version = "0.19.1", features = ["onig"] }
byteorder = "1.4.3"
symphonia = "0.5.4"
cpal = { version = "0.15.2", optional = true }
rand = "0.8"
rubato = { version = "0.15.0" }
reqwest = "0.11.6"
urlencoding = "2.1.3"
tokio = { version = "1.42.0", features = ["full"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
hound="3.5.1"
serde ="1.0.130"
tracing="0.1.37"